Bug fixed gradient z-index

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -86,6 +86,8 @@ body > div.background-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: -1;
+  overflow: hidden;
 
   &.circle > div.background-block {
     border-radius: 50%;
@@ -140,7 +142,6 @@ body > div.background-container {
     width: 20px;
     height: 20px;
     background: var(--background-line-color-1);
-    z-index: -1;
 
     &:nth-child(3n + 1) {
       background: var(--background-line-color-1);
@@ -299,7 +300,7 @@ button.gradient {
     var(--primary-color-5) 100%
   );
   position: relative;
-  z-index: 100;
+  z-index: 1;
   &:before {
     border-radius: inherit;
     background-image: -webkit-linear-gradient(
@@ -322,7 +323,7 @@ button.gradient {
     top: 0;
     left: 0;
     opacity: 0;
-    z-index: -100;
+    z-index: -1;
     -moz-transition: opacity 0.5s ease-in-out;
     -webkit-transition: opacity 0.5s ease-in-out;
     transition: opacity 0.5s ease-in-out;
